<resources>
    <string name="app_name">Cypherpunk</string>
    <string name="action_account">Account</string>
    <string name="action_settings">Settings</string>
    <string name="main_status_disconnected">Tap to protect</string>
    <string name="status_connecting">Connecting</string>
    <string name="main_status_connected">You are protected</string>
    <string name="vpn_cancel">Cancel</string>
    <string name="main_sign_up">Sign Up and get a 7-Day Free Premium Trial</string>
    <string name="store_url">https://play.google.com/store/apps/details?id=com.cypherpunk.privacy</string>
    <string name="contact_us_url">https://cypherpunk.zendesk.com/hc/requests/new</string>
    <string name="help_url">https://support.cypherpunk.com/hc</string>
    <string name="terms_of_service_url">https://cypherpunk.com/terms-of-service</string>
    <string name="privacy_policy_url">https://cypherpunk.com/privacy-policy</string>
    <string name="share_subject">Get 30 Days Premium Free [Cypherpunk]</string>
    <string name="share_text">We’ll give you both 30 days free! https://play.google.com/store/apps/details?id=com.cypherpunk.privacy</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">invalid email</string>
    <string name="no_internet">Hmm, seems you aren\'t connected to the internet?</string>
    <string name="email_already_registered">email address is already registered</string>
    <string name="api_error">Error</string>
    <string name="invalid_mail_password">invalid password</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sign_up_message">Hello! Please set your password</string>
    <string name="sign_up_hint">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_policy1">"By signing up, you agree to our "</string>
    <string name="sign_up_policy2">Terms of Service</string>
    <string name="sign_up_policy3">" and confirm that you have read the "</string>
    <string name="sign_up_policy4">Privacy Policy</string>
    <string name="sign_up_policy5">.</string>
    <string name="login_header">Welcome back.</string>
    <string name="login">Login</string>
    <string name="login_forgot_password"><u>Forgot password?</u></string>
    <string name="login_sent_password_recovery">We sent you password recovery email.</string>
    <string name="login_hint">Password</string>
    <string name="confirmation_email_header">Setting up…</string>
    <string name="confirmation_email_status1">Awaiting email confirmation…</string>
    <string name="confirmation_email_status2">We haven\'t received your email confirmation yet.</string>
    <string name="confirmation_email_check_again">Check again</string>
    <string name="confirmation_email_resend_email">Resend email</string>
    <string name="confirmation_back_login">Back to Sign In</string>
    <string name="confirmation_email_resend">Re-send confirmation email</string>
    <string name="identify_email_hint">Email</string>
    <string name="identify_email_get_started">Get Started</string>
    <string name="identify_email_message">Please input your email to begin.</string>
    <string name="reset_password_submit">Submit</string>
    <string name="reset_password_text">Enter your email address \n to reset your password.</string>
    <string name="title_activity_reset_password">Reset your password</string>
    <string name="mode_description_text">‘Speed and Country’ mode is very fast, because it is not encrypted.\n Omnicos directe al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores. At solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles.</string>
    <string name="settings_mode_max_privacy">Max privacy</string>
    <string name="settings_mode_max_speed">Max speed</string>
    <string name="settings_mode_max_freedom">Max freedom</string>
    <string name="settings_header_account">Account</string>
    <string name="settings_header_configuration">Configuration</string>
    <string name="settings_header_configuration_basic">Basic Settings</string>
    <string name="settings_header_configuration_advanced">Advanced Settings</string>
    <string name="action_send">send</string>
    <string name="action_done">done</string>
    <string name="setting_connect_dialog_message">Reconnect to apply new settings?</string>
    <string name="setting_category_startup">Startup</string>
    <string name="setting_vpn_auto_start_connect">Auto-connect on device boot</string>
    <string name="setting_vpn_dns_block_ads">Block Ads</string>
    <string name="setting_vpn_dns_block_malware">Block Malware</string>
    <string name="setting_category_privacy_settings">Privacy Settings</string>
    <string name="setting_vpn_crypto_profile">Privacy Mode</string>
    <string name="setting_vpn_crypto_profile_strong">Max Privacy</string>
    <string name="setting_vpn_crypto_profile_strong_desc">Maximum encryption settings</string>
    <string name="setting_vpn_crypto_profile_stealth">Max Freedom</string>
    <string name="setting_vpn_crypto_profile_stealth_desc">Stealth mode for anti-censorship</string>
    <string name="setting_vpn_crypto_profile_default">Recommended Default</string>
    <string name="setting_vpn_crypto_profile_default_desc">Good balance of speed and privacy</string>
    <string name="setting_vpn_crypto_profile_none">Max Speed</string>
    <string name="setting_vpn_crypto_profile_none_desc">No additional encryption for fastest speeds</string>
    <string name="setting_vpn_crypto_cipher">Cipher</string>
    <string name="setting_vpn_crypto_cipher_none">NONE</string>
    <string name="setting_vpn_crypto_cipher_aes128cbc">AES-128-CBC</string>
    <string name="setting_vpn_crypto_cipher_aes256cbc">AES-256-CBC</string>
    <string name="setting_vpn_crypto_auth">Auth</string>
    <string name="setting_vpn_crypto_auth_sha1">SHA-1</string>
    <string name="setting_vpn_crypto_auth_sha256">SHA-256</string>
    <string name="setting_vpn_crypto_auth_sha512">SHA-512</string>
    <string name="setting_vpn_crypto_keylen">Key</string>
    <string name="setting_vpn_crypto_keylen_rsa4096">RSA-4096</string>
    <string name="setting_privacy_firewall_mode">Privacy Firewall</string>
    <string name="setting_privacy_firewall_mode_never">Off</string>
    <string name="setting_privacy_firewall_mode_never_desc">Privacy Firewall is disabled</string>
    <string name="setting_privacy_firewall_mode_auto">Auto</string>
    <string name="setting_privacy_firewall_mode_auto_desc">Privacy Firewall will automatically engage the internet killswitch while the VPN is on, preventing any leak while not on the Cypherpunk Privacy Network.</string>
    <string name="setting_privacy_firewall_mode_always">Always</string>
    <string name="setting_privacy_firewall_mode_always_desc">Privacy Firewall will always engage the internet killswitch, preventing any leak while not on the Cypherpunk Privacy Network, even while the VPN is off.</string>
    <string name="setting_category_advanced">Advanced Settings</string>
    <string name="setting_category_advanced_settings">Advanced Settings</string>
    <string name="setting_category_vpn_settings">VPN Settings</string>
    <string name="setting_vpn_backend">VPN Backend</string>
    <string name="setting_vpn_backend_openvpn23">OpenVPN 2.3</string>
    <string name="setting_vpn_backend_openvpn23_desc">OpenVPN 2.3 is trusted and stable.</string>
    <string name="setting_vpn_backend_openvpn31">OpenVPN 3.1</string>
    <string name="setting_vpn_backend_openvpn31_desc">OpenVPN 3.1 is still experimental.</string>
    <string name="setting_network">Auto-connect on untrusted networks</string>
    <string name="setting_network_summary">Privacy when you need it most</string>
    <string name="title_activity_network">Manage trusted networks</string>
    <string name="setting_application">VPN Split Tunnel</string>
    <string name="setting_application_summary">Configure which apps to route through VPN</string>
    <string name="setting_vpn_port_remote">VPN Server Port</string>
    <string name="setting_vpn_port_remote_summary">Use alternate remote TCP/UDP port for VPN</string>
    <string name="setting_vpn_port_local">VPN Local Port</string>
    <string name="setting_vpn_port_local_summary">Use alternate local TCP/UDP port for VPN</string>
    <string name="setting_vpn_port_forwarding">Port Forwarding</string>
    <string name="setting_vpn_port_forwarding_summary">Allow incoming connection to your mobile device over an external port</string>
    <string name="setting_small_packets">Use small packets</string>
    <string name="setting_small_packets_summary">Optimized packet size for improved connectivity to various router and mobile networks</string>
    <string name="setting_use_openvpn3">Enable experimental OpenVPN 3 support</string>
    <string name="setting_use_openvpn3_summary">OpenVPN 3 features performance enhancements but is still alpha quality.</string>
    <string name="account_setting_category_type">Account Type</string>
    <string name="account_setting_upgrade">Upgrade</string>
    <string name="account_setting_category_settings">Account Settings</string>
    <string name="account_setting_email">Email</string>
    <string name="account_setting_password">Password</string>
    <string name="account_setting_category_more">More</string>
    <string name="account_setting_premium_free">Share Cypherpunk with a Friend</string>
    <string name="account_setting_rate">Rate Our Service</string>
    <string name="account_setting_contact">Open a Support Ticket</string>
    <string name="account_setting_contact_summary">Your satisfaction is important to us!</string>
    <string name="account_setting_help">Help</string>
    <string name="account_setting_logout">Sign out</string>
    <string name="account_type_free">Free</string>
    <string name="account_type_premium">Premium</string>
    <string name="account_type_organization">Organization</string>
    <string name="account_type_developer">Developer</string>
    <string name="account_plan_monthly">Monthly</string>
    <string name="account_plan_semiannually">Semiannually</string>
    <string name="account_plan_annually">Annually</string>
    <string name="account_plan_forever">Forever</string>
    <string name="account_plan_expiration_format">MMM dd, yyyy</string>
    <string name="premium_free_text">For every friend who signs up,\n we’ll give you both 30 days free!</string>
    <string name="premium_free_facebook">Facebook</string>
    <string name="premium_free_twitter">Twitter</string>
    <string name="premium_free_email">Email</string>
    <string name="rate_dialog_rate_now">Rate Now!</string>
    <string name="rate_dialog_later">Later</string>
    <string name="rate_text">Do you like Cypherpunk Privacy? Please take a moment to rate us! It is a huge help to us, and lets other people like you enjoy the internet privately and without censorship.</string>
    <string name="select_mode_title">Select your Cypherpunk Privacy mode</string>
    <string name="select_mode_connect">Connect</string>
    <string name="select_mode_skip">Skip</string>
    <string name="network_auto_secure">AUTO-SECURE</string>
    <string name="network_auto_secure_description">Cypherpunk can automatically secure connections to untrusted networks.</string>
    <string name="newt_work_auto_secure_connections">Auto secure connections</string>
    <string name="network_wifi_networks">WI-FI NETWORKS</string>
    <string name="network_wifi_description">Add the networks you trust. Cypherpunk will NOT automatically connect through the VPN when you connect to these trusted networks.</string>
    <string name="network_other_networks">OTHER NETWORKS</string>
    <string name="network_other_auto_secure_connections">Auto secure connections</string>
</resources>