<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.cypherpunk.privacy.ui.common.TypefaceTextView
        style="@style/SubHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_background"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/network_auto_secure"
        app:fontName="DosisMedium"/>

    <com.cypherpunk.privacy.ui.common.TypefaceTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_background"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/network_auto_secure_description"
        android:textSize="14sp"
        app:fontName="DosisMedium"/>

    <include
        android:id="@+id/auto_secure_container"
        layout="@layout/list_item_network"/>

    <com.cypherpunk.privacy.ui.common.TypefaceTextView
        android:id="@+id/typefaceTextView"
        style="@style/SubHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/category_background"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/network_other_networks"
        app:fontName="DosisMedium"/>

    <include
        android:id="@+id/other_auto_secure_container"
        layout="@layout/list_item_network"/>

    <com.cypherpunk.privacy.ui.common.TypefaceTextView
        style="@style/SubHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/category_background"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/network_wifi_networks"
        app:fontName="DosisMedium"/>

    <com.cypherpunk.privacy.ui.common.TypefaceTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_background"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/network_wifi_description"
        android:textSize="14sp"
        app:fontName="DosisMedium"/>

</LinearLayout>
