<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.cypherpunk.privacy.widget.TypefaceTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/network_auto_secure"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:fontName="DosisMedium" />

    <com.cypherpunk.privacy.widget.TypefaceTextView
        android:id="@+id/typefaceTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/network_auto_secure_description"
        android:textColor="@color/sub_text"
        android:textSize="14sp"
        app:fontName="DosisMedium" />

    <RelativeLayout
        android:id="@+id/auto_secure_container"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/list_item_background"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.cypherpunk.privacy.widget.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/newt_work_auto_secure_connections"
            android:textSize="18sp"
            app:fontName="DosisMedium" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/auto_secure_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:focusable="false" />

    </RelativeLayout>

    <com.cypherpunk.privacy.widget.TypefaceTextView
        android:id="@+id/typefaceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/background"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/network_other_networks"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:fontName="DosisMedium" />

    <RelativeLayout
        android:id="@+id/other_auto_secure_container"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/list_item_background"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.cypherpunk.privacy.widget.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/network_other_auto_secure_connections"
            android:textSize="18sp"
            app:fontName="DosisMedium" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/other_auto_secure_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:focusable="false" />

    </RelativeLayout>

    <com.cypherpunk.privacy.widget.TypefaceTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/background"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/network_wifi_networks"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:fontName="DosisMedium" />

    <com.cypherpunk.privacy.widget.TypefaceTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/network_wifi_description"
        android:textColor="@color/sub_text"
        android:textSize="14sp"
        app:fontName="DosisMedium" />

</LinearLayout>
