<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.cypherpunk.android.vpn.widget.TypefaceRadioButton
                android:id="@+id/max_privacy_radio_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="104dp"
                android:layout_height="108dp"
                android:button="@null"
                android:drawableTop="@drawable/settings_privacy_vector"
                android:text="@string/settings_mode_max_privacy"
                android:textSize="14sp"
                android:theme="@style/AppTheme.RadioButton" />

            <com.cypherpunk.android.vpn.widget.TypefaceRadioButton
                android:id="@+id/max_speed_radio_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="128dp"
                android:layout_height="132dp"
                android:button="@null"
                android:drawableTop="@drawable/settings_rocket_vector"
                android:text="@string/settings_mode_max_speed"
                android:textSize="14sp"
                android:theme="@style/AppTheme.RadioButton" />

            <com.cypherpunk.android.vpn.widget.TypefaceRadioButton
                android:id="@+id/max_freedom_radio_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="104dp"
                android:layout_height="108dp"
                android:button="@null"
                android:drawableTop="@drawable/settings_freedom_vector"
                android:text="@string/settings_mode_max_freedom"
                android:textSize="14sp"
                android:theme="@style/AppTheme.RadioButton" />

        </RadioGroup>

        <com.cypherpunk.android.vpn.widget.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/mode_description_title"
            android:textSize="22sp" />

        <com.cypherpunk.android.vpn.widget.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/mode_description_text"
            android:textSize="14sp" />

    </LinearLayout>

</layout>
