<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <include layout="@layout/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingLeft="28dp"
            android:paddingRight="28dp">

            <com.cypherpunk.android.privacy.widget.TypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reset_password_text"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Cypherpunk.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:theme="@style/TextInputLayoutControl">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_email_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:theme="@style/EditTextColorControl" />

            </android.support.design.widget.TextInputLayout>

            <com.cypherpunk.android.privacy.widget.TypefaceButton
                android:id="@+id/submit_button"
                style="@style/Widget.Cypherpunk.YellowButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/reset_password_submit" />

        </LinearLayout>

    </LinearLayout>

</layout>
